--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
 
                         <h1 class="hi_title__exjYy">
-                           I'm a Application Engineer 
+                           I'm a Senior Analyst
                             & frontend 
                             developer 
                         </h1>
@@ -176,7 +176,17 @@
                         </h2>
 
                         <div class="timeline" data-animate-el>
-
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Dbiz Pvt Ltd</h3>
+                                        <h5 class="timeline__meta">Senior Analyst - Mobile</h5>
+                                        <p class="timeline__timeframe">Nov 2024 - Present</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>As a Senior Analyst, I’ve enhanced product development with React Native
+                                     </p></div>
+                                </div>
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
