--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
 
                         <h1 class="hi_title__exjYy">
-                           I'm a Senior Analyst
+                           I'm a Senior Software Analyst
                             & frontend 
                             developer 
                         </h1>
