--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Dbiz Pvt Ltd</h3>
+                                    <h4 class="timeline__title">Dbiz.ai Pvt Ltd</h3>
                                         <h5 class="timeline__meta">Senior Analyst - Mobile</h5>
                                         <p class="timeline__timeframe">Nov 2024 - Present</p>
                                 </div>
