--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Arun Alexander</title>
+    <title>Arun Alexandar</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -56,14 +56,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Arun Alexander.</a></span>
+                <span class="mobile-home-link"><a href="index.html">Arun Alexandar.</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Arun Alexander.</a></li>
+                        <li><a href="index.html" class="home-link">Arun Alexandar.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -89,7 +89,7 @@
                     <div class="column">
                         <div 
                         class="text-pretitle with-line">
-                            Hello,  I am Arun Alexander
+                            Hello,  I am Arun Alexandar
                         </div>
 
                         <h1 class="hi_title__exjYy">
