--- a/index.html
+++ b/index.html
@@ -178,10 +178,14 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Dbiz.ai Pvt Ltd</h3>
                                         <h5 class="timeline__meta">Senior Analyst - Mobile </h5>
-                                        <p class="timeline__timeframe">Nov 2024 - Present</p>
+                                        <p class="timeline__timeframe">Nov 2024 - Apr 2025</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>
+                                    <p>As a developer, I have driven impactful product development using React JS and React Native, boosting performance and reducing bugs by 25%. 
+                                        I implemented TypeScript and AI-driven clustering for intelligent fact-checking, improving data accuracy by 80% and enhancing user experience.
+                                         With a strong focus on clean architecture, I utilized Test-Driven Development (TDD) and achieved 90% test coverage, improving code reliability and overall product efficiency by up to 30%.
+                                          I built responsive cross-platform applications, integrated Redux for optimized state management and API handling, and ensured seamless collaboration through GitHub and Jira.
+                                           By actively contributing in scrum and retrospectives, and presenting technical progress to teams of 10+ members, I helped align product vision and drive project success.
                                      </p></div>
                                 </div>
                             <div class="timeline__block">
